auto-test/tests/chapter_18/invalid_types/tag_resolution/distinct_struct_types.c
int foo(void) {
    struct s {
        int a;
        int b;
    };
    struct s result = {1, 2};
    return result.a + result.b;
}

int main(void) {
    
    
    struct s;
    
    struct s blah = {foo(), foo()};
    return blah.a;
}